alteração da quantidade da lista

--- a/aula02/index.html
+++ b/aula02/index.html
@@ -23,10 +23,9 @@
 
     <p>Litas ordenadas são escritas com a tag ol. São utilizadas para descrever elementos que a ordenação é essencial. Essa ordenação é feita automaticamente pelo HTML.</p>
 
-    <ol>
+    <ol type="4">
         <li>coisinha</li>
         <li>coisinha</li>
-        <li>nova coisinha</li>
         <li>coisinha</li>
         <li>coisinha</li>
     </ol>
