--- a/aula02/index.html
+++ b/aula02/index.html
@@ -48,7 +48,10 @@
          <li>coisinha</li>
          <li>coisinha</li>
     </ol>
+<h2>Links - Navegação</h2>
 
+<a href="Receita.html"> click em mim para ver uma receita maravilhosa</a><br>
+<a href="https://www.youtube.com/watch?v=d-cpV7o5V9k">Dicionario do programador</a>
 </body>
 
 </html>
