--- a/aula02/Receita.html
+++ b/aula02/Receita.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Biscoito Goiabada</h1>
 
+    <img src="imagem/download.jpeg" alt="biscoitos de goiabada">
+    
     <h2>Ingredientes</h2>
 
         <ul>
