adção de icons com links

--- a/aula03/pagina2.html
+++ b/aula03/pagina2.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 03 - Links com imagens</title>
+    <title>pagina 2</title>
 </head>
 <body>
-    <h1>Aula 03</h1>
+    <h1>pagina 02</h1>
 
     <h2>links com imagens</h2>
 
-    <!-- Porquinho voando para o dicionario -->
-
-    <!-- <a target="_blank" href="https://dicionario.priberam.org/online"> 
-        <img src="imagens/32381bacon_98873.png" alt="porquinho" width="20">
+    <!-- Entre no You Tube -->
+    <!-- <a target="_blank" href=https://www.youtube.com/?app=desktop&hl=pt> 
+        <img src="imagens/1490889704-you-tube_82508.png" alt="site de videos" width="20">
     </a> -->
-         
-    <a href="#">
+
+    <a href="index.html">
         <img src="../aula03/imagens/32381bacon_98873.png" alt="Porquinho" width="60"></a>
-    <a href="pagina2.html">
+    <a href="#">
         <img src="imagens/1490889704-you-tube_82508.png" alt="site de videos" width="60"></a>
     <a href="pagina3.html">
         <img src="imagens/netflix_macos_bigsur_icon_189917 (1).png" alt="streamer online" width="60"></a>
