--- a/aula03/index.html
+++ b/aula03/index.html
@@ -17,10 +17,10 @@
     </a> -->
          
     <a href="#">
-        <img src="../aula03/imagens/32381bacon_98873.png" alt="Porquinho" width="60"></a>
+        <img src="../aula03/imagens/32381bacon_98873.png" alt="navegando para a pagina inicial" height="60"></a>
     <a href="pagina2.html">
-        <img src="imagens/1490889704-you-tube_82508.png" alt="site de videos" width="60"></a>
+        <img src="imagens/1490889704-you-tube_82508.png" alt="navegando para a pagina 2" height="60"></a>
     <a href="pagina3.html">
-        <img src="imagens/netflix_macos_bigsur_icon_189917 (1).png" alt="streamer online" width="60"></a>
+        <img src="imagens/netflix_macos_bigsur_icon_189917 (1).png" alt="navegando para a pagina 3" height="60"></a>
 </body>
 </html>
