oficina ajuste css

--- a/brincando/index.html
+++ b/brincando/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-   
-    <title>Oficina</title>
-    <link rel="stylesheet" href="style3.css">
+    <title>Fanfic Online</title>
+    <link rel="stylesheet" href="style0.css">
 </head>
 <body>
-
     <header>
         <div class="menu">
-            <h1 class="logo"> Oficina </h1>
+            <h1 class="logo"> Fanfic Online </h1>
             <nav class="header-menu">
                 <ul class="lista-menu">
                     <li><a href="#">Home</a></li>
@@ -24,7 +21,7 @@
         </div>
     </header>
 
-    <main>
+    <main></main>
         <div class="main-content">
             <h1 class="titulo"> Serviços Automotivos </h1>
             <h2 class="subtitulo"> Faça seus orçamento! </h2>
@@ -58,8 +55,5 @@
 
         </div>  
     </footer>
-
-
 </body>
 </html>
-
