--- a/projeto loja/teste.html
+++ b/projeto loja/teste.html
@@ -7,10 +7,25 @@
     <link rel="stylesheet" href="styleLoja.css">
 </head>
 <body>
+    <header>
+        <div class="menu">
+            <img class="logo" src="logo-2102971364-1594603074-696c04a5091181cd85e73ac99f0180021594603074.png" alt="loja">
+            <nav class="header-menu">
+                <ul class="lista-menu">
+                    <li><a href="#">Novidades</a></li>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Masculino</a></li>
+                    <li><a href="#">Feminino</a></li>
+                    <li><a href="#">Infantil</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <main>
         <div class="main-content">
-            <h1 class="titulo"> Serviços Automaticos</h1>
-            <h2 class="subtitulo"> Faça seus orçamento! </h2>
+            <h1 class="titulo"> Roupas.Com</h1>
+            <h2 class="subtitulo"> Fique por dendro de nossas Ofertas! </h2>
         </div>
         <div class="conteinerCards">
             <div class="subConteiner">
@@ -43,9 +58,39 @@
                 <button id="button-form" type="submit">Saiba Mais</button>
                 
             </div>
-        </div>
-    </div>
+            <div class="subConteiner">
+                <div class="image">
+                    <img src="A.jfif" alt="Acessórios" width="280px" height="500px">
+                </div>
+                <div class="textoCards">
+                    <h1>Acessórios</h1>
+                </div>
+                <button id="button-form" type="submit">Saiba Mais</button>
+            </div>    
+        </div>    
     </main>
+    <footer>
+        <div class="footer-conteiner">
+            <div>
+                <h1>Cadastre-se</h1>
+            </div>
 
+            <div class="footer-form">
+                <form action="#">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email"><br>
+                    <button id="button-form" type="submit">Enviar</button>
+                </form>
+            </div>
+
+            <div class="footer-contact">
+                <h3>Informações de Contato:</h3>
+                <p>Endereço: Rua Exemplo, 123</p>
+                <p>Email: contato@empresa.com.br</p>
+                <p>Telefone: (85) 9988776655</p>
+            </div>
+            
+        </div>
+    </footer>
 </body>
 </html>
